--- a/package.json
+++ b/package.json
@@ -6,20 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
-    "@types/node": "25.3.0",
-    "@types/react": "19.2.14",
-    "@types/react-dom": "19.2.3",
-    "autoprefixer": "10.4.24",
-    "eslint": "9.39.3",
-    "eslint-config-next": "16.1.6",
+    "@prisma/client": "^7.4.1",
+    "axios": "^1.13.5",
+    "classnames": "^2.5.1",
     "next": "16.1.6",
-    "postcss": "8.5.6",
-    "react": "19.2.4",
-    "react-dom": "19.2.4",
-    "tailwindcss": "4.2.0",
-    "typescript": "5.9.3"
+    "next-auth": "^4.24.13",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-icons": "^5.5.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.6",
+    "prisma": "^7.4.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
